error.txt
   Compiling ruthe v0.1.0 (/Users/kisaczka/Desktop/code/ruthe)
error[E0277]: `StringId` doesn't implement `Debug`
   --> src/lib.rs:200:12
    |
195 | #[derive(Clone, Copy, Debug, PartialEq)]
    |                       ----- in this derive macro expansion
...
200 |     Symbol(StringId), // NOW USING STRING INTERNING!
    |            ^^^^^^^^ the trait `Debug` is not implemented for `StringId`
    |
    = note: add `#[derive(Debug)]` to `StringId` or manually `impl Debug for StringId`
help: consider annotating `StringId` with `#[derive(Debug)]`
    |
 13 + #[derive(Debug)]
 14 | pub struct StringId(pub u8);
    |

error[E0369]: binary operation `==` cannot be applied to type `&StringId`
   --> src/lib.rs:200:12
    |
195 | #[derive(Clone, Copy, Debug, PartialEq)]
    |                              --------- in this derive macro expansion
...
200 |     Symbol(StringId), // NOW USING STRING INTERNING!
    |            ^^^^^^^^
    |
note: an implementation of `PartialEq` might be missing for `StringId`
   --> src/lib.rs:13:1
    |
 13 | pub struct StringId(pub u8);
    | ^^^^^^^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `StringId` with `#[derive(PartialEq)]`
    |
 13 + #[derive(PartialEq)]
 14 | pub struct StringId(pub u8);
    |

error[E0594]: cannot assign to `self.data[_]`, which is behind a `&` reference
  --> src/lib.rs:79:13
   |
79 |             self.data[pos + i] = b;
   |             ^^^^^^^^^^^^^^^^^^^^^^ `self` is a `&` reference, so it cannot be written to
   |
help: consider changing this to be a mutable reference
   |
43 |     pub fn intern(&mut self, s: &str) -> Result<StringId, ErrorCode> {
   |                    +++

error[E0594]: cannot assign to `self.strings[_]`, which is behind a `&` reference
  --> src/lib.rs:83:9
   |
83 |         self.strings[next] = (pos as u16, bytes.len() as u16);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `self` is a `&` reference, so it cannot be written to
   |
help: consider changing this to be a mutable reference
   |
43 |     pub fn intern(&mut self, s: &str) -> Result<StringId, ErrorCode> {
   |                    +++

warning: value assigned to `stack_len` is never read
   --> src/lib.rs:270:29
    |
270 |         let mut stack_len = 0;
    |                             ^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0277, E0369, E0594.
For more information about an error, try `rustc --explain E0277`.
warning: `ruthe` (lib) generated 1 warning
error: could not compile `ruthe` (lib) due to 4 previous errors; 1 warning emitted
